test/mutation_analysis/s0709_to_lower_case/hafis/starchat/mutants/2/result.txt
./test/mutation_analysis/s0709_to_lower_case/hafis/starchat/mutants/2/Solution.java:18: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
